# Nibbler

./: .gitignore  CMakeLists.txt  nibbler  sdl_install.sh
basicLib/: CMakeLists.txt
basicLib/include/: NibblerGUI.hpp  UIGroup.hpp
basicLib/targsrc/: NibblerGUI.cpp  UIGroup.cpp  mouseEvents.cpp
includes/: BasicFood.hpp  Entity.hpp  Food.hpp  FoodFactory.hpp  GameManager.hpp  IGUI.hpp  ShrinkFood.hpp  Snake.hpp  SnakeSegment.hpp  SuperFood.hpp  dataStructures.hpp  libIncludes.hpp  nibbler.hpp
lib/: CMakeLists.txt  NibblerGUI.cpp  NibblerGUI.hpp  dataStructures.hpp
lib/include/: IGUI.hpp  NibblerGUI.hpp  UIElement.hpp  dataStructures.hpp
lib/targsrc/: NibblerGUI.cpp  UIElement.cpp  Util.cpp
spaceShip/: CMakeLists.txt
spaceShip/include/: SpriteLib.hpp  UIElement.hpp
spaceShip/targsrc/: SpriteLib.cpp  UIGroup.cpp
spriteLib/: CMakeLists.txt
spriteLib/include/: NibblerGUI.hpp  SpriteLib.hpp  UIElement.hpp
spriteLib/targsrc/: NibblerGUI.cpp  SpriteLib.cpp  UIElement.cpp  Util.cpp  factory.cpp  mouseEvents.cpp
targsrc/: BasicFood.cpp  Entity.cpp  Food.cpp  FoodFactory.cpp  GameManager.cpp  ShrinkFood.cpp  Snake.cpp  SnakeSegment.cpp  SuperFood.cpp  main.cpp
